--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Document</title>
 </head>
 <body>
+    <header class="header">
+
+    </header>
     <h4>Hola soy Vidal</h4>
     <h3>Bienvenido a la pagina</h3>
 </body>
